--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "doctrine/cache": "^1.9.1",
         "doctrine/collections": "^1.5",
         "doctrine/common": "^2.11 || ^3.0",
-        "doctrine/dbal": "^2.9.3",
+        "doctrine/dbal": "dev-bugfix",
         "doctrine/event-manager": "^1.1",
         "doctrine/inflector": "^1.0",
         "doctrine/instantiator": "^1.3",
@@ -61,5 +61,11 @@
     },
     "archive": {
         "exclude": ["!vendor", "tests", "*phpunit.xml", ".travis.yml", "build.xml", "build.properties", "composer.phar", "vendor/satooshi", "lib/vendor", "*.swp"]
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/nobYsDarling/dbal"
+        }
+    ]
 }
